[package]
name = "gametetris-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"

[dev-dependencies]
console = "0.15.5"
zenoh = "0.7.2-rc"
uuid = "1.1.3"
human-hash = "0.4.0"
async-std = "1.12.0"